upgrade rakudo to latest version

--- a/raku-notebooks/Functions.ipynb
+++ b/raku-notebooks/Functions.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Str**: Perl 6's string type\n",
+    "**Str**: Raku's string type\n",
     "\n",
     "Can use single or double quotes.\n",
     "\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "Wow this \"is exciting"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "Nepal"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "I live in Nepal"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "I live in $country"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "(This is good You want more in your Nepal)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,26 +138,19 @@
    "source": [
     "\"This is good\" , \"You want more in your $country\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Perl 6",
-   "language": "perl6",
-   "name": "perl6"
+   "display_name": "Raku",
+   "language": "raku",
+   "name": "raku"
   },
   "language_info": {
    "file_extension": ".p6",
    "mimetype": "text/plain",
-   "name": "perl6",
-   "version": "6.c"
+   "name": "raku",
+   "version": "6.d"
   }
  },
  "nbformat": 4,
