--- a/raku-notebooks/Variables.ipynb
+++ b/raku-notebooks/Variables.ipynb
@@ -349,26 +349,19 @@
    "source": [
     "area(10, 7.45)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Perl 6",
-   "language": "perl6",
-   "name": "perl6"
+   "display_name": "Raku",
+   "language": "raku",
+   "name": "raku"
   },
   "language_info": {
    "file_extension": ".p6",
    "mimetype": "text/plain",
-   "name": "perl6",
-   "version": "6.c"
+   "name": "raku",
+   "version": "6.d"
   }
  },
  "nbformat": 4,
