--- a/raku-notebooks/Variables.ipynb
+++ b/raku-notebooks/Variables.ipynb
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Functions are called subroutines in Perl 6.\n",
+    "Functions are called subroutines in Raku.\n",
     "\n",
     "Lets say we have a function:\n",
     "\n",
